fix: (accessibility) Change font-size units to em's and adjust background/foreground colors for better contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,17 @@
 @charset "utf-8";
 /* CSS Document */
 
+/* 2019-06-14:
+ *	- change font sizes to use 'em' units
+ *	- adjust colors to meet accessibility contrast requirements
+ *	- adjust height of filter bar to enclose Filter output heading and controls.
+ *	- replace some id specifications with element name specifications, but
+ *		left id specifications in cases where the id is used in script.
+ */
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 1em;
 	color: #333;
 	line-height: 1.5;
 }
@@ -14,7 +22,7 @@ body {
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 1em;
 	color: #333;
 }
 a {
@@ -23,7 +31,7 @@ a {
 }
 a:hover, a:focus {
 	color: #3397db;
-	text-decoration: none;
+	text-decoration: underline;
 }
 a img{
 	border: none 0px #fff;
@@ -35,17 +43,21 @@ h1, h2, h3, h4, h5, h6 {
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-#maincontent {
-  background-color: #f3f3f3;
+main {
+/*  background-color: #f3f3f3; */
+	background-color: #333;
   min-height: 100%;
 }
-#footer {
-  background-color: #444;
-  color: #aaa;
-  font-size: 8pt;
-  letter-spacing: 1px;
-  padding: 25px;
-  text-align: center;
+
+footer {
+	width: 100%;
+  background-color: #333;
+  color: #ddd;
+  font-size: 0.8em;
+  letter-spacing: 0.1em;
+  height: 60px;
+	text-align: center;
+	padding: 15px 0 0 0;
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
@@ -60,16 +72,16 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 1.1em;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 0.3em;
   text-transform: uppercase;
 }
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    font-size: 1.1em;
     margin: 0;
     width: calc(50% - 80px);
 }
@@ -78,7 +90,6 @@ nav h1 a {
 #breadcrumb li {
     display: inline;
 }
-
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
     padding: 8px;
@@ -88,7 +99,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: blue;
     text-decoration: none;
 }
 
@@ -104,24 +115,33 @@ nav h1 a {
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
+
 .filter-options {
   width: 100%;
-  height: 50px;
-  background-color: #3397DB;
+  background-color: #333;
   align-items: center;
 }
+
 .filter-options h2 {
-  color: white;
-  font-size: 1rem;
+  color: #eee;
+  font-size: 1.3em;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+	margin: 0;
+  padding: 8px 20px 0;
 }
+
+/* put the labels offscreen, but visible to screen readers */
+.filter-options label {
+	position: absolute;
+	left: -9999px;
+}
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
+  font-size: 1em;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -137,8 +157,9 @@ nav h1 a {
   padding: 30px 15px 60px;
   text-align: center;
 }
+
 #restaurants-list li {
-  background-color: #fff;
+  background-color: #333;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
   margin: 15px;
@@ -147,6 +168,7 @@ nav h1 a {
   text-align: left;
   width: 270px;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
@@ -155,26 +177,29 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
+
 #restaurants-list li h1 {
-  color: #f18200;
+  color: orange;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-size: 1.3em;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
+	color: white;
   margin: 0;
-  font-size: 11pt;
+  font-size: 1em;
 }
-#restaurants-list li a {
+.restaurants-list li a {
   background-color: orange;
-  border-bottom: 3px solid #eee;
-  color: #fff;
+  border-bottom: 3px solid black;
+  color: #222;
   display: inline-block;
-  font-size: 10pt;
+  font-size: 1em;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -189,28 +214,33 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: calc(100% - 80px);
   position: fixed;
   right: 0;
   top: 80px;
   width: 50%;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
 .inside #footer {
   bottom: 0;
-  position: absolute;
+/*  position: absolute;
+*/
   width: 50%;
 }
+
 #restaurant-name {
-  color: #f18200;
+  color: orange;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-size: 1.8em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -221,13 +251,13 @@ nav h1 a {
 	width: 90%;
 }
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 1em;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 1em;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -247,7 +277,7 @@ nav h1 a {
 }
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  font-size: 2em;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
@@ -271,5 +301,5 @@ nav h1 a {
   margin: 0 0 10px;
 }
 #restaurant-hours td {
-  color: #666;
+  color: #ddd;
 }
